overflow in shoppingcart fixed, ugly solution mayb?

--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@
 
     border: 1px solid black;
     background-color: #8E7777;
-
+    height:44%;
     width: 20%;
     overflow: auto;
 
